# K-AIDF

./: .env.example  .gitignore  CHANGELOG.md  CODEOWNERS  CONTEXT.md  CONTRIBUTING.md  CONTRIBUTOR_LICENSE_AGREEMENT.md  Dockerfile  IMPLEMENTATION.md  LICENSE  MANIFESTO.md  Makefile  README.md  RELEASING.md  app.py  docker-compose.local.yml  docker-compose.yml  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  release.yml
agent-aidf/: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  RELEASING.md  pyproject.toml
agent-aidf/scripts/: bootstrap.sh  check.sh  dev.sh  list-docs.sh  shell.sh
agent-aidf/src/agent_aidf/: contracts.py  i18n.py  legacy_cli.py  llm_provider.py  maturity.py  mentor.py  project.py  repo.py  webui.py
agent-aidf/src/agent_aidf/cli/: main.py
agent-aidf/src/agent_aidf/locale/: agent_aidf.pot
agent-aidf/src/agent_aidf/providers/: olmo_local.py
agent-aidf/src/agent_aidf/webui_dist/: index.html
agent-aidf/src/agent_aidf/webui_dist/assets/: index-CsNsah7E.css  index-D_MvR5Fg.js
agent-aidf/tests/: test_cli.py  test_contracts.py  test_instant_apps.py  test_mentor.py
agent-aidf/webui/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
agent-aidf/webui/src/: App.tsx  index.css
agent-aidf/webui/src/components/ui/: badge.tsx  button.tsx  card.tsx  textarea.tsx
docs/: contract.md
kobkob-kaidf-generator/: CHANGELOG.md  CONTRIBUTING.md
kobkob-kaidf-generator/.github/: PULL_REQUEST_TEMPLATE.md
kobkob-kaidf-generator/.github/workflows/: release.yml
kobkob-kaidf-generator/specs/: kaidf.metadata-v2.example.yaml
kobkob-kaidf-generator/src/kaidf_gen/: cli.py  generator.py  loader.py  utils.py
kobkob-kaidf-generator/tests/: test_cli.py  test_generator.py  test_validate.py
mcp-aidf/: README.md  docker-compose.yml  pyproject.toml
mcp-aidf/.github/workflows/: release.yml
mcp-aidf/scripts/: bootstrap.sh
mcp-aidf/tests/: test_app.py
scripts/: check.sh  dev.sh  env-common.sh  generate-ethical-pack-example.sh  generate-maturity-pack-example.sh  generate-v2-example.sh  list-docs.sh  load-agent-env.sh  load-mcp-env.sh  shell.sh
specs/: README.md  contract.example.yaml  kaidf.default.yaml  kaidf.ethical-model-pack.example.yaml  kaidf.maturity-model-pack.example.yaml
src/agent_aidf/: cli.py  controller.py  instant_apps.py  project.py  repo.py  shell.py
src/kaidf_gen/: errors.py  generator.py  schema.py  template_loader.py
src/kaidf_gen/schemas/: kaidf-spec.schema.json
tests/: test_app.py  test_cli.py  test_controller.py  test_generator.py  test_instant_apps.py  test_project.py  test_template_loader.py  test_validate.py
