[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-aidf"
version = "0.4.1"
description = "Terminal-first agent shell for navigating and consuming K-AIDF repositories."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "PyYAML>=6.0.1",
  "textual>=0.58",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[project.scripts]
kob = "agent_aidf.cli.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
agent_aidf = ["locale/*.pot", "locale/**/LC_MESSAGES/*.po", "locale/**/LC_MESSAGES/*.mo"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
